--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,6 @@
 @define-color warning #36C2CE;
 @define-color bg #2e3440;
 @define-color bg1 #4c566a;
-@define-color critical #EF5A6F;
 @define-color button #36C2CE;
 @define-color inactive #d8dee9;
 @define-color active #FF8343;
@@ -54,8 +53,8 @@ window#waybar {
 /* submap */
 #submap {
   color: @warning;
-  margin: 0 4px 0 10px;
-  font-size: 13px;
+  margin: 0 2px 4px 10px;
+  font-size: 17px;
 }
 
 #custom-separator {
