--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -19,10 +19,25 @@ window#waybar {
 
 #workspaces button {
   border-radius: 0;
-  margin-right: -4px;
+  margin-right: -5px;
+  font-size: 17px;
   color: @fg;
   background-color: @bg;
 }
+
+#workspaces button:first-child {
+  margin-bottom: 2px;
+}
+
+#workspaces button:nth-child(2) {
+  margin-bottom: 1px;
+  margin-left: 3px;
+}
+
+#workspaces button:last-child {
+  margin-bottom: 2px;
+  margin-left: -5px;
+} 
 
 #workspaces button.empty {
   color: @bg1;
@@ -97,4 +112,8 @@ window#waybar {
 
 #pulseaudio {
   margin-bottom: 2px;
+}
+
+#clock {
+  padding-bottom: 2px;
 }
