--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -13,6 +13,10 @@ window#waybar {
   font-weight: bold;
 }
 
+.modules-right {
+  padding-right: 8px;
+}
+
 #workspaces {
   font-size: 14px;  
 }
@@ -26,7 +30,7 @@ window#waybar {
 }
 
 #workspaces button:first-child {
-  margin-bottom: 2px;
+  margin-bottom: 1px;
 }
 
 #workspaces button:nth-child(2) {
