--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,5 +1,5 @@
 @define-color fg #d8dee9;
-@define-color warning #36C2CE;
+@define-color warning #EF5A6F;
 @define-color bg #2e3440;
 @define-color bg1 #4c566a;
 @define-color button #36C2CE;
