--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,18 +7,25 @@
 @define-color active #FF8343;
 @define-color hover #891652;
 
+* { 
+    padding: 0;
+    margin: 0;
+}
+
 window#waybar {
   background-color: @bg;
   font-family: 'Font Awesome 6 Free Solid';
-  font-weight: bold;
 }
 
 .modules-right {
-  padding-right: 4px;
+  padding-right: 10px;
+}
+.modules-left {
+  padding-left: 10px;
 }
 
-#workspaces {
-  font-size: 14px;  
+.modules-center {
+  margin-top: -10px;
 }
 
 #workspaces button {
@@ -27,15 +34,38 @@ window#waybar {
   font-size: 17px;
   color: @fg;
   background-color: @bg;
+  padding: 0px 8px 0px 8px;
 }
 
 #workspaces button:first-child {
-  margin-bottom: 2px;
+  margin-bottom: -7px;
 }
 
 #workspaces button:nth-child(2) {
-  margin-bottom: 1px;
+  margin-bottom: -7px;
   margin-left: 3px;
+}
+
+#workspaces button:nth-child(3) {
+  margin-bottom: -8px;
+}
+
+#workspaces button:nth-child(4) {
+  margin-bottom: -8px;
+}
+
+#workspaces button:nth-child(5) {
+  margin-bottom: -8px;
+}
+
+#workspaces button:nth-child(6) {
+  margin-bottom: -7px;
+}
+
+#workspaces button:last-child {
+  margin-right: 1px;
+  margin-bottom: -7px;
+  font-size: 19px;
 }
 
 #workspaces button.empty {
@@ -66,9 +96,9 @@ window#waybar {
 
 /* submap */
 #submap {
+  margin: -6px 2px -6px 0px;
   color: @warning;
-  margin: 0 2px 4px 10px;
-  font-size: 17px;
+  font-size: 26px;
 }
 
 #custom-separator {
