removed old tabbed layout indicator and upgrade new tabbed layout indicator written in python

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -102,7 +102,7 @@ window#waybar {
 #submap {
   margin: -4px 2px 0px 0px;
   color: @warning;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 #custom-separator {
@@ -164,4 +164,10 @@ window#waybar {
 #custom-pymor.normal {
   background-color: @bg;
   color: @fg;
+}
+
+#custom-tabbed.normal {
+  background-color: @bg;
+  color: @fg;
+  font-size: 16px;
 }
