--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,82 +8,67 @@
 @define-color hover #891652;
 
 * {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 window#waybar {
-  background-color: @bg;
-  font-family: 'Symbols Nerd Font';
+    background-color: @bg;
+    font-family: 'Symbols Nerd Font';
 }
 
 .modules-right {
-  padding-right: 10px;
+    padding-right: 10px;
 }
 
-.modules-left {
-  padding-left: 10px;
-}
-
-.modules-center {
-  margin-top: -10px;
-}
+.modules-left {}
 
 #workspaces button {
-  border-radius: 0;
-  margin-right: -5px;
-  font-size: 17px;
-  color: @fg;
-  background-color: @bg;
-  padding: 0px 8px 0px 8px;
+    border-radius: 0;
+    margin-right: -5px;
+    font-size: 17px;
+    color: @fg;
+    background-color: @bg;
+    padding: 0px 8px 0px 8px;
 }
 
 #workspaces button:first-child {
-  margin-bottom: -7px;
+    font-size: 17px;
 }
 
 #workspaces button:nth-child(2) {
-  margin-bottom: -7px;
-  margin-left: 3px;
+    margin-left: 3px;
+    font-size: 17px;
 }
 
-#workspaces button:nth-child(3) {
-  margin-bottom: -8px;
-}
+#workspaces button:nth-child(3) {}
 
-#workspaces button:nth-child(4) {
-  margin-bottom: -8px;
-}
+#workspaces button:nth-child(4) {}
 
-#workspaces button:nth-child(5) {
-  margin-bottom: -8px;
-}
+#workspaces button:nth-child(5) {}
 
-#workspaces button:nth-child(6) {
-  margin-bottom: -7px;
-}
+#workspaces button:nth-child(6) {}
 
 #workspaces button:last-child {
-  margin-right: 1px;
-  margin-bottom: -7px;
-  font-size: 19px;
+    margin-right: 1px;
+    font-size: 19px;
 }
 
 #workspaces button.empty {
-  color: @bg1;
+    color: @bg1;
 }
 
 #workspaces button:hover {
-  color: @bg;
-  background-color: @fg;
+    color: @bg;
+    background-color: @fg;
 }
 
-#workspaces button.active {
-  color: @warning;
+#workspaces button.focused {
+    color: @warning;
 }
 
-#workspaces button.active:hover {
-  color: @bg;
+#workspaces button.focused:hover {
+    color: @bg;
 }
 
 
@@ -93,27 +78,27 @@ window#waybar {
 #custom-easy,
 #custom-network,
 #pulseaudio {
-  color: @fg;
-  background-color: @bg;
-  font-size: 16px;
+    color: @fg;
+    background-color: @bg;
+    font-size: 16px;
 }
 
 /* submap */
 #submap {
-  margin: -4px 2px 0px 0px;
-  color: @warning;
-  font-size: 15px;
+    margin: -4px 2px 0px 0px;
+    color: @warning;
+    font-size: 15px;
 }
 
 #custom-separator {
-  margin: 0 6px 0 6px;
+    margin: 0 6px 0 6px;
 }
 
 #custom-stretch {
-  background-color: @bg;
-  color: @fg;
-  padding-bottom: 3px;
-  font-size: 16px;
+    background-color: @bg;
+    color: @fg;
+    padding-bottom: 3px;
+    font-size: 16px;
 }
 
 #custom-network.warning,
@@ -131,48 +116,48 @@ window#waybar {
 #custom-disk-root,
 #custom-disk-home.warning,
 #custom-disk-hdd.warning {
-  background-color: @bg;
-  color: @warning;
-  padding-bottom: 3px;
-  font-size: 16px;
+    background-color: @bg;
+    color: @warning;
+    padding-bottom: 3px;
+    font-size: 16px;
 }
 
 #custom-easy {
-  font-size: 10px;
-  margin-bottom: 2px;
+    font-size: 10px;
+    margin-bottom: 2px;
 }
 
 #custom-easy.warning {
-  font-size: 18px;
-  margin-bottom: -1px;
+    font-size: 18px;
+    margin-bottom: -1px;
 }
 
 #custom-separator {
-  font-size: 20px;
-  padding-bottom: 4px;
-  color: #4c566a;
+    font-size: 20px;
+    padding-bottom: 4px;
+    color: #4c566a;
 }
 
 #pulseaudio {
-  margin-bottom: 2px;
+    margin-bottom: 2px;
 }
 
 #clock {
-  padding-bottom: 2px;
+    padding-bottom: 2px;
 }
 
 #custom-pymor.normal {
-  background-color: @bg;
-  color: @fg;
+    background-color: @bg;
+    color: @fg;
 }
 
 #custom-tabbed.normal {
-  background-color: @bg;
-  color: @fg;
-  font-size: 16px;
+    background-color: @bg;
+    color: @fg;
+    font-size: 16px;
 }
 
 
 #pulseaudio {
-  margin-bottom: 3px;
+    margin-bottom: 3px;
 }
