--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,29 +1,33 @@
 * {
   padding: 0;
   margin: 0;
-  font-size: 16px;
 }
 
 window#waybar {
   background-color: #2e3440;
-  font-family: "VictorMono Nerd Font Mono";
+  font-family: "Lexend Deca";
+}
+
+#workspaces {
+  padding-right: 8px;
 }
 
 #workspaces button {
   border-radius: 0;
   font-size: 17px;
+  font-family: "Shrikhand";
   color: #d8dee9;
   background-color: #2e3440;
   padding: 0 6px;
 }
 
 #workspaces button.empty {
-  font-family: "HeavyData Nerd Font";
+  font-family: "Shrikhand";
   opacity: 0.5;
 }
 
 #workspaces button:hover {
-  color: #EABF61;
+  color: #2e3440;
   background-color: #d8dee9;
 }
 
@@ -37,26 +41,43 @@ window#waybar {
 }
 
 .modules-right {
-  font-family: "VictorMono Nerd Font Mono";
-}
-
-.modules-left {
-  font-family: "HeavyData Nerd Font";
-  font-weight: 100;
+  font-family: "Lexend Deca";
 }
 
 .warning {
   padding: 0 4px;
   color: #EABF61;
   background-color: #2e3440;
-  font-family: "VictorMono Nerd Font Mono";
-  font-weight: 900;
+  font-family: "Lexend Deca";
+  font-weight: 600;
+  font-size: 17px;
 }
 
 .normal {
   padding: 0 4px;
-  font-family: "VictorMono Nerd Font Mono";
-  font-weight: 900;
+  font-family: "Lexend Deca";
+  font-weight: 600;
+  font-size: 17px;
+}
+
+.easy {
+  margin-top: 1px;
+}
+
+.pomo {
+  margin-top: 1px;
+}
+
+.time {
+  margin-top: 2px;
+}
+
+.updates {
+  margin-top: 2px;
+}
+
+.gameon {
+  margin-top: 1px;
 }
 
 /*# sourceMappingURL=style.css.map */
