--- a/.config/waybar/style.scss
+++ b/.config/waybar/style.scss
@@ -7,8 +7,8 @@ $inactive: #d8dee9;
 $active: #FF8343;
 $hover: #891652;
 $font: "Lexend Deca";
-$workspace_font: "Shrikhand";
-$weight: 600;
+$workspace_font: "Leckerli One";
+$weight: 900;
 $padx: 4px;
 $pady: 2px;
 
@@ -30,6 +30,7 @@ window#waybar {
   border-radius: 0;
   font-size: 18px;
   font-family: $workspace_font;
+  font-weight: 900;
   color: $fg;
   background-color: $bg;
   padding: 0 $padx;
@@ -67,14 +68,14 @@ window#waybar {
   background-color: $bg;
   font-family: $font;
   font-weight: $weight;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .normal {
   padding: 0 4px;
   font-family: $font;
   font-weight: $weight;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 #mode {
