--- a/.config/waybar/style.scss
+++ b/.config/waybar/style.scss
@@ -1,4 +1,4 @@
-$fg: #d8dee9;
+$fg: #eceff4;
 $warning: #EABF61;
 $bg: #2e3440;
 $bg1: #4c566a;
@@ -20,10 +20,12 @@ $pady: 2px;
 window#waybar {
   background-color: $bg;
   font-family: $font;
+  border-bottom: 1px solid $bg1;
 }
 
 #workspaces {
   padding-right: 8px;
+  border-bottom: 1px solid $bg1;
 }
 
 #workspaces button {
@@ -37,7 +39,7 @@ window#waybar {
 }
 
 #workspaces button.empty {
-  opacity: 0.5;
+  color: $bg1;
 }
 
 #workspaces button.urgent {
@@ -45,12 +47,14 @@ window#waybar {
 }
 
 #workspaces button:hover {
-  color: $bg;
+  border-bottom: 1px solid $warning;
+  //color: $bg;
   background-color: $fg;
 }
 
 #workspaces button.focused {
-  color: $warning;
+  border-bottom: 1px solid $warning;
+  //color: $warning;
   opacity: 1;
 }
 
@@ -69,6 +73,7 @@ window#waybar {
   font-family: $font;
   font-weight: $weight;
   font-size: 20px;
+  border-bottom: 1px solid $warning;
 }
 
 .normal {
@@ -76,6 +81,7 @@ window#waybar {
   font-family: $font;
   font-weight: $weight;
   font-size: 20px;
+  border-bottom: 1px solid $bg1;
 }
 
 #mode {
