--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -29,16 +29,16 @@ window#waybar {
 }
 
 #workspaces button.urgent {
-  color: #EABF61;
+  color: #bf616a;
 }
 
 #workspaces button:hover {
-  border-bottom: 1px solid #EABF61;
+  color: #2e3440;
   background-color: #eceff4;
 }
 
 #workspaces button.focused {
-  border-bottom: 1px solid #EABF61;
+  color: #bf616a;
   opacity: 1;
 }
 
@@ -52,12 +52,12 @@ window#waybar {
 
 .warning {
   padding: 0 4px;
-  color: #EABF61;
+  color: #bf616a;
   background-color: #2e3440;
   font-family: "Lexend Deca";
   font-weight: 900;
   font-size: 20px;
-  border-bottom: 1px solid #EABF61;
+  border-bottom: 1px solid #bf616a;
 }
 
 .normal {
@@ -69,7 +69,7 @@ window#waybar {
 }
 
 #mode {
-  color: #EABF61;
+  color: #bf616a;
   margin-bottom: 1px;
   font-weight: 500;
 }
