--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,7 +5,7 @@
 
 window#waybar {
   background-color: #2e3440;
-  font-family: "Leckerli One";
+  font-family: "Pacifico";
   border-bottom: 0.5px solid #4c566a;
 }
 
@@ -17,7 +17,7 @@ window#waybar {
 #workspaces button {
   border-radius: 0;
   font-size: 16px;
-  font-family: "Leckerli One";
+  font-family: "Pacifico";
   font-weight: 900;
   color: #eceff4;
   background-color: #2e3440;
