--- a/.config/waybar/style.scss
+++ b/.config/waybar/style.scss
@@ -6,7 +6,7 @@ $button: #36C2CE;
 $inactive: #d8dee9;
 $active: #FF8343;
 $hover: #891652;
-$main_font: "Leckerli One";
+$main_font: "Pacifico";
 $widget_font: "Roboto";
 $weight: 900;
 $padx: 6px;
