--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -51,7 +51,7 @@ window#waybar {
   color: #bf616a;
   background-color: #2e3440;
   font-weight: 900;
-  font-size: 17px;
+  font-size: 20px;
   font-family: "Roboto";
   border-bottom: 0.5px solid #bf616a;
 }
@@ -60,7 +60,7 @@ window#waybar {
 .hidden {
   padding: 0 6px;
   font-weight: 900;
-  font-size: 17px;
+  font-size: 20px;
   font-family: "Roboto";
   border-bottom: 0.5px solid #4c566a;
 }
@@ -70,18 +70,20 @@ window#waybar {
   color: #2e3440;
 }
 
-#mode {
-  color: #bf616a;
-  margin-bottom: 1px;
-  font-weight: 500;
-}
-
 .block {
   background-color: #bf616a;
   color: #bf616a;
   padding: 0 40px;
   font-weight: 900;
-  font-size: 17px;
+  font-size: 20px;
+  font-family: "Roboto";
+}
+
+.mode {
+  color: #bf616a;
+  margin-bottom: 1px;
+  font-weight: 900;
+  font-size: 20px;
   font-family: "Roboto";
 }
 
