--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -4,14 +4,14 @@
 }
 
 window#waybar {
-  background-color: #2e3440;
+  background-color: #272E33;
   font-family: "Pacifico";
-  border-bottom: 0.5px solid #4c566a;
+  border-bottom: 0.5px solid #2E383C;
 }
 
 #workspaces {
   padding-right: 8px;
-  border-bottom: 0.5px solid #4c566a;
+  border-bottom: 0.5px solid #2E383C;
 }
 
 #workspaces button {
@@ -19,72 +19,69 @@ window#waybar {
   font-size: 14px;
   font-family: "Pacifico";
   font-weight: 900;
-  color: #eceff4;
-  background-color: #2e3440;
+  color: #D3C6AA;
+  background-color: #272E33;
   padding: 0 6px;
 }
 
 #workspaces button.empty {
-  color: #4c566a;
+  color: #2E383C;
 }
 
 #workspaces button.urgent {
-  color: #bf616a;
+  color: #E69875;
 }
 
 #workspaces button:hover {
-  color: #2e3440;
-  background-color: #eceff4;
+  color: #272E33;
+  background-color: #D3C6AA;
 }
 
 #workspaces button.focused {
-  color: #bf616a;
+  color: #E69875;
   opacity: 1;
 }
 
 #workspaces button.focused:hover {
-  color: #2e3440;
+  color: #272E33;
 }
 
 .warning {
   padding: 0 6px;
-  color: #bf616a;
-  background-color: #2e3440;
+  color: #E69875;
+  background-color: #272E33;
   font-weight: 900;
   font-size: 20px;
-  font-family: "Roboto";
-  border-bottom: 0.5px solid #bf616a;
+  border-bottom: 0.5px solid #E69875;
 }
 
 .normal,
 .hidden {
+  color: #D3C6AA;
   padding: 0 6px;
   font-weight: 900;
   font-size: 20px;
-  font-family: "Roboto";
-  border-bottom: 0.5px solid #4c566a;
+  border-bottom: 0.5px solid #2E383C;
 }
 
 .hidden {
-  background-color: #2e3440;
-  color: #2e3440;
+  background-color: #272E33;
+  color: #272E33;
 }
 
 .block {
-  background-color: #bf616a;
-  color: #bf616a;
+  background-color: #E69875;
+  color: #E69875;
   padding: 0 40px;
   font-weight: 900;
   font-size: 20px;
-  font-family: "Roboto";
 }
 
 .mode {
-  color: #bf616a;
+  color: #E69875;
   margin-bottom: 1px;
   font-weight: 900;
   font-size: 20px;
-  font-family: "Roboto";
 }
 
 /*# sourceMappingURL=style.css.map */
