--- a/.config/waybar/style.scss
+++ b/.config/waybar/style.scss
@@ -10,7 +10,7 @@ $workspace_font: "Pacifico";
 $weight: 900;
 $padx: 6px;
 $pady: 2px;
-$widget_font_size: 20px;
+$widget_font_size: 18px;
 $border_size: .5px solid;
 
 * {
@@ -18,20 +18,23 @@ $border_size: .5px solid;
   margin: 0;
 }
 
+
 window#waybar {
   background-color: $bg;
   font-family: $workspace_font;
-  border-bottom: $border_size $bg1;
+}
+
+.modules-right {
+  margin-top: -8px;
 }
 
 #workspaces {
   padding-right: 8px;
-  border-bottom: $border_size $bg1;
 }
 
 #workspaces button {
   border-radius: 0;
-  font-size: 14px;
+  font-size: 12px;
   font-family: $workspace_font;
   font-weight: 900;
   color: $fg;
@@ -67,7 +70,6 @@ window#waybar {
   background-color: $bg;
   font-weight: $weight;
   font-size: $widget_font_size;
-  border-bottom: $border_size $warning;
 }
 
 .normal,
@@ -76,7 +78,6 @@ window#waybar {
   padding: 0 $padx;
   font-weight: $weight;
   font-size: $widget_font_size;
-  border-bottom: $border_size $bg1;
 }
 
 .hidden {
@@ -92,9 +93,3 @@ window#waybar {
   font-size: $widget_font_size;
 }
 
-.mode {
-  color: $warning;
-  margin-bottom: 1px;
-  font-weight: $weight;
-  font-size: $widget_font_size;
-}
