--- a/.config/waybar/style.scss
+++ b/.config/waybar/style.scss
@@ -33,7 +33,7 @@ window#waybar {
 }
 
 #workspaces button {
-  border-radius: 0;
+//  border-radius: 0;
   font-size: 14px;
   font-family: $workspace_font;
   font-weight: 900;
