--- a/.config/waybar/style.scss
+++ b/.config/waybar/style.scss
@@ -1,7 +1,7 @@
-$fg: #D3C6AA;
-$warning: #E69875;
-$bg: #272E33;
-$bg1: #475258;
+$fg: #EBDBB2;
+$warning: #FB4934;
+$bg: #1D2021;
+$bg1: #282828;
 $button: #36C2CE;
 $inactive: #d8dee9;
 $active: #FF8343;
